[package]
name = "themify"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"
description = "A very simple program to apply a color palette to an image, based on minimal color distance."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0"
structopt= "0.3.25"
image = "0.23.14"
hex = "0.4.3"
